fix carta-icon-menu clipping on PWA and other minor changes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -217,7 +217,6 @@ a:hover {
 
   .carta-icons-menu {
     margin-bottom: 10px;
-    border-radius: 0;
     bottom: 76px !important;
     left: unset !important;
     right: 0 !important;
